Restore the search wrapped message to its former type and position.

Summary:
This fixes issue 398731 by restoring the "search wrapped" info message to its former type and position.

BUG: 398731

Test Plan: works as intended (= as before #cc8b2208)

Reviewers: #ktexteditor, dhaumann

Reviewed By: #ktexteditor, dhaumann

Subscribers: dhaumann, neundorf, loh.tar, ngraham, kwrite-devel, kde-frameworks-devel

Tags: #ktexteditor, #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D19416