src/search/katesearchbar.cpp
@@ -313,9 +313,9 @@ void KateSearchBar::showSearchWrappedHint(SearchDirection searchDirection)
 
     if (!m_wrappedMessage || m_lastSearchDirection != searchDirection) {
         m_lastSearchDirection = searchDirection;
-        m_wrappedMessage = new KTextEditor::Message(i18n("Search wrapped"), KTextEditor::Message::Positive);
+        m_wrappedMessage = new KTextEditor::Message(i18n("Search wrapped"), KTextEditor::Message::Information);
         m_wrappedMessage->setIcon(icon);
-        m_wrappedMessage->setPosition(KTextEditor::Message::CenterInView);
+        m_wrappedMessage->setPosition(KTextEditor::Message::BottomInView);
         m_wrappedMessage->setAutoHide(2000);
         m_wrappedMessage->setAutoHideMode(KTextEditor::Message::Immediate);
         m_wrappedMessage->setView(m_view);
